# rust_symbol

./: Cargo.toml
src/: lib.rs  main.rs  read_dmp.rs
tests/: lib_unittest.rs  read_dmp_unittest.rs
