[package]
name = "rust_symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidump="0.14.0"
minidump-processor = { version = "0.14.0", features = [
    "http",
]}
serde_json="1.0"
serde="1.0.147"
anyhow="1.0.58"
tokio = {version = "1.21.2", features = ["full"] }
futures = "0.3"